--- a/gardening_front/index.html
+++ b/gardening_front/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/shared/assets/logo/myGardening.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>gardening_client</title>
+    <title>마이가드닝</title>
   </head>
   <body>
     <div id="root"></div>
